[package]
  name = "collections"
  version = "0.1.1"
  authors = ["Ludovic Desert <ludovic@4goa.net>"]
  edition = "2018"
[dependencies]
  serde = "1.0"
  serde_json = "1.0"
  serde_derive = "1.0"
  hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.20-alpha3" }
  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.20-alpha3" }
  holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.20-alpha3" }
[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
